Adds basic login functionality with session

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  hr
+  p Welcome to my simple application using Express!
+  hr
+  a(href='/logout') logout
